Changed colour text to white for visibility

--- a/index.html
+++ b/index.html
@@ -1027,7 +1027,7 @@
           <!--
           FOOTER
         -->
-          <div style="padding: 2 px;" class="divider">
+          <div style="padding: 2 px; color: white;" class="divider">
             <p>What is GameSphere?
               GameSphere is India based online gaming platform  and has a team of 40 people working on our  platform. Our goal is to create the ultimate online playground. Free and open to all. Read more about the platform we are building on our company page. If you are a game developer looking to achieve success for your game on web, discover what we offer and get in touch via GameSphere for Developers.</p><br>
           </div><br><br>
