Changes that I have made:I have added a search bar option to search any content and on clicking the search icon it will work.

--- a/index.html
+++ b/index.html
@@ -46,10 +46,15 @@
         </a>
 
         <!-- Search Button -->
-        <div class="header-actions">
-          <button class="search-btn">
-            <ion-icon name="search-outline"></ion-icon>
-          </button>
+        <div class="header-actions"> 
+           <input type="text" placeholder="search">
+
+           <a href="https://www.Google.com" target="_blank">
+            <button class="search-btn">    
+              <ion-icon name="search-outline"></ion-icon>
+            </button> 
+           </a>
+          
 
           <!-- Language -->
           <div class="lang-wrapper">
