--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
 
           <!-- Sign Up Button -->
-          <button class="btn btn-primary">Sign in</button>
+          <a href="signin.html"><button class="btn btn-primary">Sign in</button></a> 
         </div>
 
         <button class="menu-open-btn" data-menu-open-btn>
