about us page content added

--- a/aboutus.html
+++ b/aboutus.html
@@ -12,7 +12,7 @@
   <!-- 
   - custom css link
 -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/aboutusstyle.css">
 
   <!-- 
   - google font link
@@ -23,7 +23,25 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
     rel="stylesheet">
 </head>
-<body class="">
-    <h1>GameSphere</h1>
+<body class="">  
+  <div class="mainhead"><p class="head">Welcome to GameSphere</p> </div>
+    
+  <div class="one">
+    <p class="intro-text"> 
+      <pre>
+      This platform is for every user where you are 
+      free to play any game without paying any fee
+      with your friend.This platform also provides 
+      you a chance to create your own game and 
+      get firm or reward.</pre>
+    </p>
+  </div>
+
+      <div class="contributors">
+        <p>Contributors</p>
+        
+      </div>
+  
+    <script src="script.js"></script>
 </body>
 </html>
