corrected the typo in the word "Tranding" as "Trending"

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <!-- Heading -->
                 <p class="section-subtitle">Today's</p>
 
-                <h2 class="h2 section-title">Tranding Games</h2>
+                <h2 class="h2 section-title">Trending Games</h2>
               </div>
 
             </div>
