--- a/aboutus.html
+++ b/aboutus.html
@@ -41,11 +41,13 @@
     </div>
   </div> 
 
+  <div class="contributors">
+  <p class="head">Contributors</p>
       <div id="contributors">
-        <p class="head">Contributors</p>
+        
           
       </div>
-
+    </div>
       <div class="contactus">
         <p class="contact">
           Don't Forget to connect with us 
