--- a/gameInfo/1vs1.html
+++ b/gameInfo/1vs1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1vs1 LOL</title>
+    <title>1v1.LOL</title>
 
     <!-- 
     - favicon
@@ -49,16 +49,17 @@
 
         <div class="overlay" data-overlay></div>
 
-        <a href="../index.html" class="logo">
-          <img src="./assets/images/logo.svg" alt="logo">
-        </a>
+        
+        
 
-        <div class="header-actions">
-
-          <button class="search-btn">
-            <ion-icon name="search-outline"></ion-icon>
-          </button>
-
+          <div class="header-actions"> 
+            <input type="text" placeholder="search">
+ 
+            <a href="https://www.Google.com" target="_blank">
+             <button class="search-btn">    
+               <ion-icon name="search-outline"></ion-icon>
+             </button> 
+            </a>
           <div class="lang-wrapper">
             <label for="language">
               <ion-icon name="globe-outline"></ion-icon>
@@ -186,7 +187,7 @@
 
               <h1 class="h1 detail-title">
                 <!--===== Game Name =====-->
-                1vs1 LOL <strong>Game</strong>
+                1v1.LOL <strong>Game</strong>
               </h1>
 
               <div class="meta-wrapper">
@@ -200,13 +201,13 @@
 
                 <!--===== Tags ====-->
                 <div class="ganre-wrapper">
-                  <a href="#">Survival,</a>
+                  <a href="#">Survival</a>
 
-                  <a href="#">Action,</a>
+                  <a href="#">Action</a>
 
-                  <a href="#">Adventure,</a>
+                  <a href="#">Adventure</a>
 
-                  <a href="#">Saveier</a>
+                  <a href="#">saviour</a>
                 </div>
 
                 <div class="date-time">
@@ -270,7 +271,7 @@
                 <!-- Heading -->
                 <p class="section-subtitle">Today's</p>
 
-                <h2 class="h2 section-title">Tranding Games</h2>
+                <h2 class="h2 section-title">trending Games</h2>
               </div>
 
             </div>
