--- a/gameInfo/lolbeans.html
+++ b/gameInfo/lolbeans.html
@@ -48,16 +48,16 @@
 
         <div class="overlay" data-overlay></div>
 
-        <a href="../index.html" class="logo">
-          <img src="./assets/images/logo.svg" alt="logo">
-        </a>
+        
 
-        <div class="header-actions">
+        <div class="header-actions"> 
+          <input type="text" placeholder="search">
 
-          <button class="search-btn">
-            <ion-icon name="search-outline"></ion-icon>
-          </button>
-
+          <a href="https://www.Google.com" target="_blank">
+           <button class="search-btn">    
+             <ion-icon name="search-outline"></ion-icon>
+           </button> 
+          </a>
           <div class="lang-wrapper">
             <label for="language">
               <ion-icon name="globe-outline"></ion-icon>
@@ -199,13 +199,13 @@
 
                 <!--===== Tags ====-->
                 <div class="ganre-wrapper">
-                  <a href="#">Survival,</a>
+                  <a href="#">Survival</a>
 
-                  <a href="#">Action,</a>
+                  <a href="#">Action</a>
 
-                  <a href="#">Adventure,</a>
+                  <a href="#">Adventure</a>
 
-                  <a href="#">Saveier</a>
+                  <a href="#">Saviour</a>
                 </div>
 
                 <div class="date-time">
@@ -269,7 +269,7 @@
                 <!-- Heading -->
                 <p class="section-subtitle">Today's</p>
 
-                <h2 class="h2 section-title">Tranding Games</h2>
+                <h2 class="h2 section-title">Trending Games</h2>
               </div>
 
             </div>
