--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <script src="script.js"></script>
   </head>
 
   <body id="top">
@@ -965,58 +966,6 @@
       </article>
     </main>
 
-    <section class="faq">
-      <div>
-        <h4 class="faq1">What is GameSphere?</h4>
-        <p>
-          GameSphere is an India-based online gaming platform dedicated to
-          providing the ultimate online playground for gamers. With a team of 40
-          passionate individuals, we strive to create an inclusive environment
-          that is free and open to all gamers. For more information about our
-          platform and mission, visit our company page.
-        </p>
-      </div>
-      <div>
-        <h4>How can I access GameSphere?</h4>
-        <p>
-          GameSphere is accessible to anyone with an internet connection. Simply
-          visit our website to create an account and start gaming! Whether
-          you're a casual player or a serious gamer, GameSphere offers a variety
-          of games and features to suit your preferences.
-        </p>
-      </div>
-      <div>
-        <h4>What types of games are available on GameSphere?</h4>
-        <p>
-          GameSphere hosts a wide range of games, including multiplayer,
-          single-player, strategy, puzzle, and more. We collaborate with game
-          developers worldwide to bring you the latest and most engaging gaming
-          experiences. Whether you're into action-packed adventures or
-          brain-teasing challenges, you'll find something for you on GameSphere.
-        </p>
-      </div>
-      <div>
-        <h4>How can game developers benefit from GameSphere for Developers?</h4>
-        <p>
-          GameSphere for Developers provides game developers with a platform to
-          showcase their games and reach a wider audience. By partnering with
-          GameSphere, developers gain access to valuable resources, promotional
-          opportunities, and support to help them achieve success for their
-          games on the web. To learn more about what we offer and how to get
-          started, visit our GameSphere for Developers page.
-        </p>
-      </div>
-      <div>
-        <h4>How can I get in touch with GameSphere for further inquiries?</h4>
-        <p>
-          If you have any questions, feedback, or inquiries about GameSphere, we
-          encourage you to reach out to us via our contact page or through our
-          official social media channels. Our team is dedicated to providing
-          excellent support and assistance to our community of gamers and
-          developers. We look forward to hearing from you!
-        </p>
-      </div>
-    </section>
     <!-- 
     - #FOOTER
   -->
@@ -1062,20 +1011,70 @@
           <!--
           FOOTER
         -->
-          <div style="padding: 2 px; color: white" class="divider">
-            <p>
-              What is GameSphere? GameSphere is India based online gaming
-              platform and has a team of 40 people working on our platform. Our
-              goal is to create the ultimate online playground. Free and open to
-              all. Read more about the platform we are building on our company
-              page. If you are a game developer looking to achieve success for
-              your game on web, discover what we offer and get in touch via
-              GameSphere for Developers.
-            </p>
-            <br />
-          </div>
-          <br /><br />
 
+          <br /><br />
+          <section class="faq" style="color: red">
+            <div>
+              <h4 class="faq-question">What is GameSphere?</h4>
+              <p class="faq-answer" class="hidden" style="display: none">
+                GameSphere is an India-based online gaming platform dedicated to
+                providing the ultimate online playground for gamers. With a team
+                of 40 passionate individuals, we strive to create an inclusive
+                environment that is free and open to all gamers. For more
+                information about our platform and mission, visit our company
+                page.
+              </p>
+            </div>
+            <div>
+              <h4 class="faq-question">How can I access GameSphere?</h4>
+              <p class="faq-answer" class="hidden" style="display: none">
+                GameSphere is accessible to anyone with an internet connection.
+                Simply visit our website to create an account and start gaming!
+                Whether you're a casual player or a serious gamer, GameSphere
+                offers a variety of games and features to suit your preferences.
+              </p>
+            </div>
+            <div>
+              <h4 class="faq-question">
+                What types of games are available on GameSphere?
+              </h4>
+              <p class="faq-answer" style="display: none">
+                GameSphere hosts a wide range of games, including multiplayer,
+                single-player, strategy, puzzle, and more. We collaborate with
+                game developers worldwide to bring you the latest and most
+                engaging gaming experiences. Whether you're into action-packed
+                adventures or brain-teasing challenges, you'll find something
+                for you on GameSphere.
+              </p>
+            </div>
+            <div>
+              <h4 class="faq-question">
+                How can game developers benefit from GameSphere for Developers?
+              </h4>
+              <p class="faq-answer" style="display: none">
+                GameSphere for Developers provides game developers with a
+                platform to showcase their games and reach a wider audience. By
+                partnering with GameSphere, developers gain access to valuable
+                resources, promotional opportunities, and support to help them
+                achieve success for their games on the web. To learn more about
+                what we offer and how to get started, visit our GameSphere for
+                Developers page.
+              </p>
+            </div>
+            <div>
+              <h4 class="faq-question">
+                How can I get in touch with GameSphere for further inquiries?
+              </h4>
+              <p class="faq-answer" style="display: none">
+                If you have any questions, feedback, or inquiries about
+                GameSphere, we encourage you to reach out to us via our contact
+                page or through our official social media channels. Our team is
+                dedicated to providing excellent support and assistance to our
+                community of gamers and developers. We look forward to hearing
+                from you!
+              </p>
+            </div>
+          </section>
           <br />
 
           <div class="quicklink-wrapper">
@@ -1175,5 +1174,20 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
+    <script>
+      //faq feature
+      const faqQuestion = document.querySelectorAll(".faq-question");
+      const faqAnswer = document.querySelectorAll(".faq-answer");
+
+      faqQuestions.forEach((faqQuestion, index) => {
+        faqQuestion.addEventListener("click", function () {
+          // Change the color of the clicked question
+          faqQuestion.style.color = "white";
+
+          // Show the corresponding answer by setting its display to "block"
+          faqAnswers[index].style.display = "block";
+        });
+      });
+    </script>
   </body>
 </html>
