Issue No #36 Fixed.

--- a/index.html
+++ b/index.html
@@ -1079,7 +1079,7 @@
       <div class="footer-bottom">
         <div class="container">
           <p class="copyright">
-            &copy; 2024 GameSphere<a href="#"></a>. All Rights Reserved
+            &copy; <strong id="copyright-year"> </strong> <a href="#"> GameSphere </a>. All Rights Reserved
           </p>
 
           <!--
@@ -1102,6 +1102,8 @@
       <ion-icon name="chevron-up"></ion-icon>
     </a>
 
+    <!-- copyright-year Script -->
+     <script src="./copyrightYear.js"></script>
     <!-- 
     - custom js link
   -->
