--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet">
+
+      <link rel="icon" href="./assets/images/favicon.png" type="image/x-icon" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+      <script src="https://kit.fontawesome.com/b08b6de27e.js" crossorigin="anonymous"></script>
+  
   </head>
 
   <body id="top">
@@ -93,23 +98,27 @@
           <ul class="navbar-list">
 
             <li>
-              <a href="./index.html" class="navbar-link">Home</a>
+              <a href="./index.html" class="navbar-link"><i class="fa fa-home" aria-hidden="true"></i>
+                Home</a>
             </li>
 
             <li>
-              <a href="#" class="navbar-link">Categories</a>
+              <a href="#" class="navbar-link"><i class="fa fa-bars" aria-hidden="true"></i>
+                Categories</a>
             </li>
 
             <li>
-              <a href="#" class="navbar-link">Dashboard</a>
+              <a href="#" class="navbar-link"><i class="fa fa-tachometer" aria-hidden="true"></i>
+                Dashboard</a>
             </li>
 
             <li>
-              <a href="#" class="navbar-link">Community</a>
+              <a href="#" class="navbar-link"><i class="fa fa-users" aria-hidden="true"></i>
+                 Community</a>
             </li>
 
             <li>
-              <a href="aboutus.html" class="navbar-link"> About Us</a>
+              <a href="aboutus.html" class="navbar-link"><i class="fa fa-info-circle" aria-hidden="true"></i> About Us</a>
             </li>
 
           </ul>
