--- a/gameInfo/lolbeans.html
+++ b/gameInfo/lolbeans.html
@@ -25,6 +25,11 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet">
+
+      <link rel="icon" href="./assets/images/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <script src="https://kit.fontawesome.com/b08b6de27e.js" crossorigin="anonymous"></script>
+
   </head>
 
   <body id="#top">
@@ -96,7 +101,7 @@
           <ul class="navbar-list">
 
             <li>
-              <a href="../index.html" class="navbar-link">Home</a>
+              <a href="../index.html" class="navbar-link"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
             </li>
 
             <li>
