changed file updated

--- a/aboutus.html
+++ b/aboutus.html
@@ -24,8 +24,8 @@
    
 
     <div class="child-left">
-      <p class="welcome-head">Welcome to</p>
-      <p class="second-head">GameSphere</p>
+      <p class="welcome-head">Welcome to GameSphere</p>
+
     </div>
     
     <div class="child-right">
@@ -33,7 +33,7 @@
         <pre>
         This platform is for every user where you are 
         free to play any game without paying any fee
-        with your friend.This platform also provides 
+        with your friend.<br>This platform also provides 
         you a chance to create your own game and 
         get firm or reward.</pre>
       </p>
@@ -63,6 +63,8 @@
           </p>
       </div>
     </div>
+  </div>
+</div>
     <script>
 //contributors list 
 async function fetchGitHubContributors(username, repo) {
