added a stylish navbar

--- a/index.html
+++ b/index.html
@@ -60,13 +60,10 @@
 
         <!-- Search Button -->
         <div class="header-actions">
-          <input type="text" placeholder="search" />
-
-          <a href="https://www.Google.com" target="_blank">
-            <button class="search-btn">
-              <ion-icon name="search-outline"></ion-icon>
-            </button>
-          </a>
+          <form class="search-box">
+            <input type="text" placeholder=" "/>
+            <button type="reset"></button>
+        </form>
 
           <!-- Language -->
           <div class="lang-wrapper">
